@@ -33,6 +33,8 @@ void console_write_line(const char *s){
 		i++;
 	}
 	
+	cursor_position = (line_no * 80) + i;
+	
 	refresh_console();
 
 	return;
